--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -224,7 +224,7 @@
                     </svg>
                     Home
                 </a>
-                <a href="projrct_intro.html" class="nav-link">
+                <a href="#" class="nav-link">
                     <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
                         <polyline points="7.5 4.21 12 6.81 16.5 4.21"></polyline>
@@ -235,7 +235,7 @@
                     </svg>
                     Overview
                 </a>
-                <a href="reflection.html" class="nav-link">
+                <a href="reflections_team.html" class="nav-link">
                     <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M15 14c.2-1 .7-1.7 1.5-2.5M9 14c-.2-1-.7-1.7-1.5-2.5M6 9h.01M18 9h.01"></path>
                         <path d="M12 2a8 8 0 0 0-8 8v1a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4v-1a8 8 0 0 0-8-8z"></path>
