--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -241,7 +241,7 @@
                         <path d="M12 2a8 8 0 0 0-8 8v1a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4v-1a8 8 0 0 0-8-8z"></path>
                         <path d="M9.1 16.3a2.8 2.8 0 0 0 5.8 0"></path>
                     </svg>
-                    Reflections
+                    Team Reflections
                 </a>
             </nav>
         </div>
