--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -343,8 +343,8 @@
                 <div class="team-member">
                     <div class="team-member-content">
                         <h4>Prachi</h4>
-                        <p>USN: 01FE23BCI</p>
-                        <p>Roll no: </p>
+                        <p>USN: 01FE23BCI015</p>
+                        <p>Roll no:124 </p>
                     </div>
                 </div>
                 <div class="team-member">
