--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -255,7 +255,7 @@
         <div class="header-content">
             <h1 class="logo">TEAM 4</h1>
             <nav class="main-nav">
-                <a href="#" class="nav-link">
+                <a href="https://github.com/sachidanand-A/urban_navigation_and_safety-/edit/main" class="nav-link">
                     <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                     </svg>
@@ -267,7 +267,7 @@
                     </svg>
                     Home
                 </a>
-                <a href="overview.html" class="nav-link">
+                <a href="#" class="nav-link">
                     <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
                         <polyline points="7.5 4.21 12 6.81 16.5 4.21"></polyline>
@@ -278,13 +278,13 @@
                     </svg>
                     Overview
                 </a>
-                <a href="reflection.html" class="nav-link">
+                <a href="reflections_team.html" class="nav-link">
                     <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M15 14c.2-1 .7-1.7 1.5-2.5M9 14c-.2-1-.7-1.7-1.5-2.5M6 9h.01M18 9h.01"></path>
                         <path d="M12 2a8 8 0 0 0-8 8v1a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4v-1a8 8 0 0 0-8-8z"></path>
                         <path d="M9.1 16.3a2.8 2.8 0 0 0 5.8 0"></path>
                     </svg>
-                    Reflections
+                    Team Reflections
                 </a>
             </nav>
         </div>
