--- a/businesscases.html
+++ b/businesscases.html
@@ -86,7 +86,7 @@
                 <h2>Pratik</h2>
                 <p>
                     1. Travel History and Analysis <br>
-                    2. Adding New Locations
+                    2. Shortest path viewing 
                 </p>
             </a>
         </div>
@@ -95,7 +95,7 @@
                 <h2>Sachidanand</h2>
                 <p>
                     1. Multiple Route Viewing  <br>
-                    2. Shortest Path Viewing 
+                    2. Adding New Locations 
                 </p>
             </a>
         </div>
