--- a/Travel_history.html
+++ b/Travel_history.html
@@ -110,24 +110,15 @@
     <div class="use-case">
         <h2>Key Features</h2>
         <p><strong>Data Storage:</strong> Travel history is stored securely in external files for future reference.</p>
-        <p><strong>Analysis Tools:</strong> Users can analyze their travel history to identify trends, such as frequently traveled routes or peak travel times.</p>
-        <p><strong>Customizable Reports:</strong> Generate detailed reports based on user preferences, including safety and efficiency metrics.</p>
+        <p><strong>Analysis:</strong> Users can analyze their travel history to identify trends, such as number of times a path is travelled.</p>
     </div>
 
     <div class="use-case">
-        <h2>Data Structures Used</h2>
-        <p><strong>Graph Representation:</strong> Stores historical travel data in a structured graph format for efficient querying.</p>
-        <p><strong>Hash Map:</strong> Associates travel routes with metadata, such as timestamps, travel time, and average speed.</p>
-        <p><strong>File System:</strong> Organizes travel logs into structured files for long-term storage and retrieval.</p>
+        <h2>Concept Used</h2>
+        <p><strong>File System:</strong> We use ( <fstream> ) file handeling.Organizes travel logs into structured files for long-term storage and retrieval.</p>
     </div>
 
-    <div class="use-case">
-        <h2>Algorithms Used</h2>
-        <p><strong>Clustering Algorithms:</strong> Groups similar travel patterns for better insights and recommendations.</p>
-        <p><strong>Pathfinding Algorithms:</strong> Analyzes historical data to suggest optimal routes for future trips.</p>
-        <p><strong>Predictive Analysis:</strong> Uses machine learning models to predict future travel patterns based on historical data.</p>
-    </div>
-
+ 
     <div class="use-case">
         <h2>Benefits</h2>
         <p>Helps users optimize their travel routines for safety and efficiency.</p>
