--- a/Travel_history.html
+++ b/Travel_history.html
@@ -115,7 +115,7 @@
 
     <div class="use-case">
         <h2>Concept Used</h2>
-        <p><strong>File System:</strong> We use ( <fstream> ) file handeling.Organizes travel logs into structured files for long-term storage and retrieval.</p>
+        <p><strong>File System:</strong> We use ( fstream ) file handeling.Organizes travel logs into structured files for long-term storage and retrieval.</p>
     </div>
 
  
