--- a/add_locations.html
+++ b/add_locations.html
@@ -115,7 +115,7 @@
 
     <div class="use-case">
         <h2>Data Structures Used</h2>
-        <p><strong>Adjacency Matrix:</strong> Locations are stored as nodes within a graph, allowing easy traversal and pathfinding.</p>
+        <p><strong>Adjacency List:</strong> Locations are stored as nodes within a graph, allowing easy traversal and pathfinding.</p>
         <p><strong>fstream[file Handling]:</strong> Locations are stored in a local file with details like name, distances.</p>
         <p><strong>Indexing:</strong> Locations are indexed by their names and categories for efficient searching.</p>
     </div>
