--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -285,25 +285,25 @@
             </div>
         </div>
 
-        <div class="use-case fade-in">
+       <div class="use-case fade-in">
             <div class="use-case-content">
-                <h2>Adding New Locations</h2>
-                <p class="sdg">It gives an opportunity to users or programmers to add new locations with their distances between adjacent destinations.</p>
+                <h2>Shortest Path View</h2>
+                <p class="sdg">When asked for navigation, the shortest path is displayed to the user.</p>
                 <div class="objective">
                     <strong>Objective</strong>
-                    Update the city map with new developments.
+                    Provide users with the shortest route option.
                 </div>
                 <div class="description">
                     <strong>Description</strong>
-                    Users or city officials can add new locations to the city map, such as newly constructed buildings, roads, or public amenities.
+                    Users can view the shortest possible route between two locations, prioritizing the least distance. This option helps users save time and resources, particularly for situations requiring the most direct path.
                 </div>
                 <div class="benefits">
                     <strong>Benefits</strong>
-                    Keeps the navigation system up-to-date, ensuring accuracy and reliability for users.
+                    Saves time, reduces travel distance, and is ideal for users seeking the most direct route.
                 </div>
             </div>
             <div class="btn-wrapper">
-                <a href="add_locations.html" class="btn"><span>Explore Adding Locations</span></a>
+                <a href="shortest_path.html" class="btn"><span>Explore Shortest Path</span></a>
             </div>
         </div>
     </main>
