--- a/shortest_path.html
+++ b/shortest_path.html
@@ -187,7 +187,7 @@
     <header class="main-header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo">TEAM 4</h1>
+                <h1 class="logo">Shortest Path Viewing</h1>
             </div>
         </div>
     </header>
