--- a/add_locations.html
+++ b/add_locations.html
@@ -187,7 +187,7 @@
     <header class="main-header">
         <div class="container">
             <div class="header-content">
-                <h1 class="logo">TEAM 4</h1>
+                <h1 class="logo">Adding New Locations </h1>
             </div>
         </div>
     </header>
