--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -221,7 +221,7 @@
     </style>
 </head>
 <body>
-    <header class="main-header">
+  <header class="main-header">
         <div class="container">
             <div class="header-content">
                 <h1 class="logo">TEAM 4</h1>
@@ -232,7 +232,7 @@
                         </svg>
                         Github
                     </a>
-                    <a href="index.html" class="nav-link">
+                    <a href="projrct_intro.html" class="nav-link">
                         <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                         </svg>
