--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -119,11 +119,14 @@
             position: relative;
         }
 
-        .use-case:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 48px rgba(0, 0, 0, 0.2);
+         main {
+            padding-top: 120px; /* Increased padding to account for fixed header */
         }
 
+        /* Update use-case styles */
+        .use-case {
+            margin-top: 20px;
+        }
         .use-case-content {
             flex: 1;
             margin-bottom: 2rem;
