--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -264,7 +264,8 @@
             </div>
         </div>
     </header>
-
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     <main class="container">
         <div class="use-case fade-in">
             <div class="use-case-content">
