--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -266,6 +266,12 @@
     </header>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    
     <main class="container">
         <div class="use-case fade-in">
             <div class="use-case-content">
