--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -271,6 +271,10 @@
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     
     <main class="container">
         <div class="use-case fade-in">
