--- a/sach_usecases.html
+++ b/sach_usecases.html
@@ -262,7 +262,10 @@
             </div>
         </div>
     </header>
-
+  <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     <main class="container">
         <div class="use-case fade-in">
             <div class="use-case-content">
