--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -234,6 +234,7 @@
                         </svg>
                         Use Cases
                     </a>
+                                      </a>
                     <a href="reflections_team.html" class="nav-link">
                         <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M15 14c.2-1 .7-1.7 1.5-2.5M9 14c-.2-1-.7-1.7-1.5-2.5M6 9h.01M18 9h.01"></path>
@@ -242,6 +243,10 @@
                         </svg>
                         Reflections
                     </a>
+                </nav>
+            </div>
+        </div>
+    </header>
                 </nav>
             </div>
         </div>
