--- a/multiple_route.html
+++ b/multiple_route.html
@@ -48,7 +48,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 6rem 2rem 2rem;
+            padding: 0 2rem;
         }
 
         .header-content {
@@ -68,6 +68,9 @@
             transition: transform 0.3s ease;
         }
 
+        .logo:hover {
+            transform: scale(1.05);
+        }
         /* Use Case Cards */
         .use-case {
             background: var(--card-bg);
