--- a/multiple_route.html
+++ b/multiple_route.html
@@ -71,6 +71,39 @@
         .logo:hover {
             transform: scale(1.05);
         }
+
+        .main-nav {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-link {
+            color: var(--text-secondary);
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .nav-link:hover {
+            color: var(--text-primary);
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .icon {
+            width: 20px;
+            height: 20px;
+        }
+
+        /* Main Content */
+        main {
+            padding-top: 100px;
+        }
+
         /* Use Case Cards */
         .use-case {
             background: var(--card-bg);
