--- a/reflections_team.html
+++ b/reflections_team.html
@@ -253,7 +253,7 @@
             </a>
 
             <a href="mallikarjun/mallikarjun_reflect.html" class="case-card">
-                <h2>Vashnavi</h2>
+                <h2>Vaishnavi</h2>
                 <div class="card-content">
                     <p>View personal reflections and insights</p>
                 </div>
