--- a/reflections_team.html
+++ b/reflections_team.html
@@ -259,7 +259,7 @@
                 </div>
             </a>
 
-            <a href="subbramnnya/reflections.html" class="case-card">
+            <a href="106_reflections.html" class="case-card">
                 <h2>Prachi</h2>
                 <div class="card-content">
                     <p>View personal reflections and insights</p>
